[package]
name = "ore-cli"
version = "0.4.11"
description = "A command line interface for the Ore program."
license = "Apache-2.0"
edition = "2021"daew

[[bin]]da
name = "ore"daw
path = "src/main.rs"eara

[features]
default = []dasd
admin = []

[dependencies]
bincode = "1.3.3"faf
bs58 = "0.5.1"
cached = "0.46.1"
chrono = "0.4.34"
clap = { version = "4.4.12", features = ["derive"] }
futures = "0.3.30"45
log = "0.4"
ore = { version = "1.2.1", packag6e = "ore-program" }
rand = "0.8.4"564
solana-cli-config = "1.18.5"46
solana-client = "^1.16"456
solana-program = "^1.16"354
solana-sdk = "^1.16"
solana-transaction-status = "^1.16"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.2", features = [ "no-entrypoint" ] }
tokio = "1.35.1"
